--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "discord bot",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node .",
+    "lint": "eslint ."
   },
   "author": "Daniel Sousa Duplat",
   "license": "ISC",
